manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  labels:
    helm.sh/chart: test-app-0.1.0
    app.kubernetes.io/name: test-app
    app.kubernetes.io/instance: test-app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: test-app
    app.kubernetes.io/instance: test-app
