manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  labels:
    helm.sh/chart: test-app-0.1.0
    app.kubernetes.io/name: test-app
    app.kubernetes.io/instance: test-app
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "testlocal.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: test-app
                port:
                  number: 80
